--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" 
           crossorigin="anonymous">
     <link rel="shortcut icon" href="" type="image/x-icon">
+    
+    
 </head>
+
 <body>
     <h1>Shopping Cart</h1>
-    <span class="fas fa-shopping-cart" id="cart-icon"></span>
+    <span class="fas fa-shopping-cart" id="cart-icon"></span><span id="number-of-cart-items"></span>
     <div class="product">
         <img src="https://via.placeholder.com/100/dd6916/ffffff?text=My+Product" 
-             alt="Placeholder product image">
+             alt="Sample Product #1">
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus 
             nesciunt, nemo explicabo exercitationem saepe quia, quibusdam 
@@ -30,5 +33,7 @@
         <span class="buy-button">Buy it now!</span>
         <span class="price">$9.99</span>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script src="/scripts/cart.js"></script>
 </body>
 </html>
