Enabled shopping cart cookies

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <h1>Shopping Cart</h1>
-    <span class="fas fa-shopping-cart" id="cart-icon"></span>
+    <span class="fas fa-shopping-cart cart" id="cart-icon"></span>
     <div class="product">
         <img src="https://via.placeholder.com/100/dd6916/ffffff?text=My+Product" 
-             alt="Placeholder product image">
-        <p>
+             alt="Sample Product #1">
+        <p class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus 
             nesciunt, nemo explicabo exercitationem saepe quia, quibusdam 
             dignissimos recusandae necessitatibus repudiandae alias fugit 
@@ -30,5 +30,8 @@
         <span class="buy-button">Buy it now!</span>
         <span class="price">$9.99</span>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script src="/scripts/cart.js"></script>
 </body>
 </html>
